--- a/app/src/main/res/layout/activity_intro2.xml
+++ b/app/src/main/res/layout/activity_intro2.xml
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/bg_main_bw">
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_main_bw"
+    tools:context="com.ssomcompany.ssomclient.Intro2Activity">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,4 +24,5 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="18dp"
         android:src="@drawable/btn_main_start"/>
+
 </RelativeLayout>
