--- a/app/src/main/res/layout/fragment_ssom_list.xml
+++ b/app/src/main/res/layout/fragment_ssom_list.xml
@@ -9,5 +9,6 @@
 
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
         android:layout_height="match_parent" android:gravity="center" />
+    <include layout="@layout/layout_write"/>
 
 </FrameLayout>
