--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -1,42 +1,126 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.ssomcompany.ssomclient.WriteActivity">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/title_wirte_type"
-        android:layout_centerHorizontal="true"/>
+        android:layout_marginLeft="132dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/title_wirte_type" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_wirte_st_b"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="30dp"/>
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="95dp"
+        android:src="@drawable/icon_wirte_photo_emp" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/toggle_write_bg_w"
-        android:layout_marginTop="80dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="30dp"/>
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="89dp"
+        android:src="@drawable/icon_wirte_st_b" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/btn_write_ok"
-        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="185dp"
+        android:src="@drawable/icon_wirte_photo" />
+
+    <ImageView
+        android:id="@+id/targetbackground"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="216dp"
+        android:layout_marginTop="128dp"
+        android:src="@drawable/toggle_write_bg_w" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/targetbackground"
+        android:layout_alignTop="@id/targetbackground"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="2dp"
+        android:src="@drawable/toggle_write_black" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/btn_write_cancle"
+        android:layout_alignLeft="@id/targetbackground"
+        android:layout_alignTop="@id/targetbackground"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/icon_check_w" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/targetbackground"
+        android:layout_alignLeft="@id/targetbackground"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="2dp"
+        android:src="@drawable/toggle_write_red" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/targetbackground"
+        android:layout_alignLeft="@id/targetbackground"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="19dp"
+        android:src="@drawable/icon_target_w" />
+    //밥, 술 차 아무거나
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#d3d3d3"
+        android:layout_marginTop="248dp">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp"
+        android:src="@drawable/icon_rice_dis" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_cof_dis"
+        android:layout_marginLeft="95.5dp"
+        />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_beer_dis"
+        android:layout_marginLeft="184dp"
+        />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_all_perss"
+        android:layout_marginLeft="272.5dp"
+        />
+    </RelativeLayout>
+    //카테고리 끝
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginLeft="108dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/btn_write_ok" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="275dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/btn_write_cancle" />
 </RelativeLayout>
