--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -108,6 +108,20 @@
         />
     </RelativeLayout>
     //카테고리 끝
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="16sp"
+    android:text="2 명이 기다리고 있어요."
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="409dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="나이는 25 ~ 26 살 이에요"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="477dp"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
