--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -88,11 +88,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true">
+                <ImageView
+                    android:id="@+id/icon_heart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_heart_w"
+                    android:layout_centerVertical="true"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="27sp"
                     android:textColor="#ffffff"
+                    android:layout_toRightOf="@+id/icon_heart"
+                    android:layout_marginLeft="15dp"
                     android:text="쏨 타기"/>
             </RelativeLayout>
 
