--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -12,10 +12,13 @@
         android:src="@drawable/title_wirte_type" />
 
     <ImageView
+        android:id="@+id/write_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="95dp"
+        android:scaleType="centerCrop"
+        android:layout_gravity="center"
         android:src="@drawable/icon_wirte_photo_emp" />
 
     <ImageView
@@ -26,6 +29,7 @@
         android:src="@drawable/icon_wirte_st_b" />
 
     <ImageView
+        android:id="@+id/write_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="140dp"
