--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -33,6 +33,13 @@
             android:layout_marginTop="18dp"
             android:layout_centerHorizontal="true"/>
         <ImageView
+            android:id="@+id/full_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/bg_fullview_main_b"/>
