--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -33,43 +33,120 @@
             android:layout_marginTop="18dp"
             android:layout_centerHorizontal="true"/>
         <ImageView
+            android:id="@+id/full_photo_st_b"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/full_photo_st_b"
             android:layout_marginTop="18dp"
             android:layout_centerHorizontal="true"/>
-
+        <ImageView
+            android:id="@+id/full_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/full_photo_st_b"
+            android:layout_alignRight="@id/full_photo_st_b"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/icon_rice_st_b"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/bg_fullview_main_b"/>
-        <TextView
-            android:id="@+id/detail_info_content"
+        <RelativeLayout
+            android:id="@+id/full_text_area"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="156dp"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:lineSpacingExtra="6sp"
-            android:textColor="#929292"
-            android:text="우리는 21~25살 2명이에요\n술 쏜다!!\n나와의 거리 1km"/>
+            android:layout_below="@id/full_photo_st_b"
+            android:layout_marginTop="20dp"
+            android:gravity="center">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="#929292"
+                    android:text="우리는 "/>
+                <TextView
+                    android:id="@+id/full_text_age"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="#e70033"
+                    android:text="21~25"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="#929292"
+                    android:text="살 "/>
+                <TextView
+                    android:id="@+id/full_text_user_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="#e70033"
+                    android:text="2"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="#929292"
+                    android:text="명이에요"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true">
+                <TextView
+                    android:id="@+id/full_text_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:lineSpacingExtra="9sp"
+                    android:textColor="#e70033"
+                    android:text="\n술"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:lineSpacingExtra="9sp"
+                    android:textColor="#929292"
+                    android:text="\n 쏜다!!"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:lineSpacingExtra="9sp"
+                android:textColor="#929292"
+                android:text="\n\n나와의 거리 1km"/>
+        </RelativeLayout>
+
         <ImageView
+            android:id="@+id/full_heart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icon_ssom_heart"
-            android:layout_marginTop="240dp"
+            android:layout_below="@id/full_text_area"
+            android:layout_marginTop="25dp"
             android:layout_centerHorizontal="true"
             />
         <TextView
-            android:id="@+id/detail_time"
+            android:id="@+id/full_detail_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="285dp"
+            android:layout_below="@id/full_heart"
+            android:layout_marginTop="10dp"
             android:textSize="16sp"
             android:gravity="center"
-            android:lineSpacingExtra="8sp"
             android:textColor="#C0C0C0"
             android:text="He say - 방금전"/>
         <TextView
@@ -77,7 +154,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="315dp"
+            android:layout_marginTop="30dp"
+            android:layout_below="@id/full_detail_time"
             android:textSize="18sp"
             android:gravity="center"
             android:lineSpacingExtra="8sp"
