--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent" android:layout_marginTop="61dp"/>
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-
+    <include layout="@layout/layout_write"/>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
