--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -22,6 +22,7 @@
         android:src="@drawable/icon_wirte_photo_emp" />
 
     <ImageView
+        android:id="@+id/write_icon_st"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="44dp"
