--- a/app/src/main/res/layout/layout_write.xml
+++ b/app/src/main/res/layout/layout_write.xml
@@ -8,7 +8,29 @@
             android:src="@drawable/btn_site_me"
             android:layout_marginTop="74dp"
             android:layout_marginLeft="10dp"/>
-
+        <RelativeLayout
+            android:id="@+id/filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_filter_w80"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="24dp">
+            <ImageView
+                android:id="@+id/filter_black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_filter_black"/>
+            <TextView
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/filter_black"
+                android:layout_marginLeft="12dp"
+                android:textSize="14sp"
+                android:textColor="#000000"
+                android:text="모두 / 20~29살 / 2~3 명"/>
+        </RelativeLayout>
         <ImageView
             android:id="@+id/btn_write"
             android:layout_width="wrap_content"
