--- a/app/src/main/res/layout/layout_write.xml
+++ b/app/src/main/res/layout/layout_write.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/bg_list_bot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/bg_list_bot"/>
         <ImageView
             android:id="@+id/map_current_location"
             android:layout_width="wrap_content"
@@ -40,4 +46,5 @@
             android:layout_alignParentRight="true"
             android:layout_marginBottom="9dp"
             android:layout_marginRight="24dp"/>
+
 </RelativeLayout>
