--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -58,11 +58,18 @@
                 android:src="@drawable/line_filter_toggle_g"/>
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                
-
+                android:layout_height="wrap_content"
+                android:background="@drawable/toggle_filter_3">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="니가 쏴"
+                    android:textColor="#ffffff"/>
             </RelativeLayout>
         </LinearLayout>
+
+
 
     </RelativeLayout>
 
