--- a/app/src/main/res/layout/ssom_list_item.xml
+++ b/app/src/main/res/layout/ssom_list_item.xml
@@ -5,7 +5,7 @@
     android:minHeight="94dp"
     >
 
-    <ImageView
+    <com.ssomcompany.ssomclient.common.CircularNetworkImageView
         android:id="@+id/icon_list_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
